[package]
name = "hello_fuse"
version = "0.1.0"
edition = "2021"

[dependencies]
fuser = "0.14"
libc = "0.2"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
slog = "2.7"
slog-term = "2.9"
slog-async = "2.7"
slog-scope = "4.4"
# env_logger = "0.11.5"


[profile.dev]
incremental = true